frontend/srcs/game/components/UserBadge/UserBadge.css
.iPongGame-UserBadge-username {
  display: flex;
  align-items: center;
  gap: 10px;
  max-width: max-content;
}

.iPongGame-UserBadge-username .username {
  font-weight: 550 !important;
  font-size: 1.2vw;
  color: var(--Dark-color-Text-content, #ececec);
  font-family: Montserrat;
}

.iPongGame-VersusBadge,
.iPongGame-UserBadge {
  position: relative;
  display: inline-block;
}

.VersusBadge,
.UserBadge {
  filter: brightness(0.8);
}

.iPongGame-UserBadge-username {
  position: absolute;
  top: 41%;
  left: 40%;
  transform: translate(-50%, -50%);
  display: flex;
  align-items: center;
}

.iPongGame-UserBadge-username .UserBadge-img {
  width: 35%; 
  height: 35%;
  max-width: 100px; 
  border-radius: 50%;
  object-fit: cover;
  object-position: center;
  border: 1px solid #fff;
}

.Versus3d {
  height: 13vw;
  width: 13vw;
}

@media (max-width: 1240px) {
  .iPongGame-UserBadge-username .username {
    font-size: 2vw !important;
  }
}

